trunk/Archive2/ed/62b27b9283ee1a/output
main.cpp:23:12: error: 'new' expression with placement arguments refers to non-placement 'operator delete'
    A *a = new (90) A[5];
           ^    ~~
main.cpp:14:10: note: 'operator delete[]' declared here
    void operator delete[](void *p, size_t t)
         ^
1 error generated.
